WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128497
Pass VM instead of ExecState to JSCell::fastGetOwnProperty().
https://bugs.webkit.org/show_bug.cgi?id=128497
Summary
Pass VM instead of ExecState to JSCell::fastGetOwnProperty().
Andreas Kling
Reported
2014-02-09 02:49:41 PST
From the random-diffs-in-my-home-directory department.
Attachments
Patch
(6.17 KB, patch)
2014-02-09 02:51 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-02-09 02:51:17 PST
Created
attachment 223623
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-09 02:52:58 PST
Attachment 223623
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSCellInlines.h:179: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2014-02-09 13:28:19 PST
Comment on
attachment 223623
[details]
Patch Clearing flags on attachment: 223623 Committed
r163755
: <
http://trac.webkit.org/changeset/163755
>
WebKit Commit Bot
Comment 4
2014-02-09 13:28:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug