Pass VM instead of ExecState to JSCell::fastGetOwnProperty(). <https://webkit.org/b/128497>

Knocks off a couple of instructions.

Reviewed by Anders Carlsson.

* dfg/DFGOperations.cpp:
* jit/JITOperations.cpp:
(JSC::getByVal):
* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::getByVal):
* runtime/JSCell.h:
* runtime/JSCellInlines.h:
(JSC::JSCell::fastGetOwnProperty):


Canonical link: https://commits.webkit.org/146523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163755 268f45cc-cd09-0410-ab3c-d52691b4dbfc